<resources>
    <string name="app_name">Email</string>
    <string name="mail_please_wait">请稍等&#8230;</string>
    <string name="mail_sending_wait">发送中&#8230;</string>
    <string name="mail_receiver">收件箱</string>
    <string name="mail_sender">发件箱</string>
    <string name="mail_all">全部邮件</string>
    <string name="mail_read">已读邮件</string>
    <string name="mail_unread">未读邮件</string>
    <string name="mail_recv_num">收件箱(%d)</string>
    <string name="mail_search">搜索邮件</string>
    <string name="mail_search_all">全部</string>
    <string name="mail_search_recv">收件人</string>
    <string name="mail_search_send">发件人</string>
    <string name="mail_search_subject">主题</string>
    <string name="mail_update">%s更新</string>
    <string name="mail_update_fail">更新失败</string>
    <string name="mail_loadmore_fail">加载失败</string>
    <string name="mail_img">[图片]</string>
    <string name="mail_detail">详情</string>
    <string name="mail_detail_hide">隐藏</string>
    <string name="mail_reply">回复</string>
    <string name="mail_reply_all">回复全部</string>
    <string name="mail_transmit">转发</string>
    <string name="mail_re_edit">再次编辑</string>
    <string name="mail_reply_title">回复：%s</string>
    <string name="mail_transmit_title">转发：%s</string>
    <string name="mail_detail_sender">发件人：</string>
    <string name="mail_detail_recvs">收件人：</string>
    <string name="mail_detail_cc">抄&#160;&#160;&#160;&#160;&#160;送：</string>
    <string name="mail_detail_date">日&#160;&#160;&#160;&#160;&#160;期：</string>
    <string name="mail_detail_subject">主&#160;&#160;&#160;&#160;&#160;题：</string>
    <string name="mail_editor_card">发自Qugting Android客户端</string>
    <string name="mail_ori_label">-&#160;-&#160;-&#160;-&#160;-&#160;-&#160;-&#160;-&#160;-&#160;-&#160;-&#160;-&#160;-&#160;-&#160;</string>
    <string name="mail_ori">原始邮件</string>
    <string name="mail_attach_label">%d附件</string>
    <string name="mail_create_new">写邮件</string>
    <string name="mail_edit">编辑</string>
    <string name="mail_all_read">全标已读</string>
    <string name="mail_send">发送</string>
    <string name="mail_cancel">取消</string>
    <string name="mail_info">邮箱信息</string>
    <string name="mail_files">邮箱文件夹</string>
    <string name="mail_delete">删除</string>
    <string name="mail_write_content_hint">输入正文&#8230;</string>
    <string name="mail_not_null_warn">标题或内容不能为空</string>
    <string name="mail_no_recv_warn">收件人不能为空</string>
    <string name="mail_delete_fail_hint">删除邮件失败，请检查网络或稍候重试</string>
    <string name="mail_link_fail_hint">连接服务器失败，请检查网络或稍候重试</string>
    <string name="mail_send_fail_hint">发送邮件失败，请检查网络或稍候重试</string>
    <string name="mail_send_success_hint">邮件发送成功</string>
    <string name="mail_attachment_download_fail">文件下载失败，请点击重试</string>
    <string name="mail_this_attachment_download_fail">文件&#034;%s&#034;下载失败，请检查网络或稍候重试</string>
    <string name="mail_attachment_cache_no_exitst">缓存文件已被删除，请尝试查找源文件</string>
    <string name="mail_delete_title">邮件删除</string>
    <string name="mail_delete_prompt">确认删除该邮件吗？</string>
    <string name="mail_delete_confirm">确认</string>

    <string name="common_back">返回</string>
    <string name="common_just_now">刚刚</string>
    <string name="common_minutes_ago">分钟前</string>
    <string name="common_before_yesterday">前天</string>
    <string name="common_yesterday">昨天</string>
    <string name="common_today">今天</string>
    <string name="common_week">星期</string>

    <string name="input_error">输入名称不能重复</string>

    <!--以下为LRecyclerView模块-->
    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">释放立即刷新</string>
    <string name="refreshing">正在刷新&#8230;</string>
    <string name="refresh_done">刷新完成</string>
    <string name="listview_header_last_time">上次更新时间：</string>

    <!--footer-->
    <string name="list_footer_loading">正在加载中&#8230;</string>
    <string name="list_footer_network_error">点击重新加载</string>
    <string name="list_footer_end">已全部加载完</string>

    <string name="text_just">刚刚</string>
    <string name="text_seconds_ago">秒前</string>
    <string name="text_minute_ago">分钟前</string>
    <string name="text_hour_ago">小时前</string>
    <string name="text_day_ago">天前</string>
    <string name="text_month_ago">月前</string>
    <string name="text_year_ago">年前</string>

</resources>
