<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp">

        <RelativeLayout
            android:id="@+id/lyDetailBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_back" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/lyDetailDelete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_mail_delete" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:textColor="@color/colorThemeII"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="[1月份第4周]价值链IT中心项oo 哦哦目周报(01.25_02.04)哦哦哦哦哦" />

        <LinearLayout
            android:id="@+id/lyBrief"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tvSender1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/mail_click"
                android:textSize="12sp"
                tools:text="马云" />

            <ImageView
                android:id="@+id/ivAttachMark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_mail_attachment"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tvAttachNum"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_weight="1"
                android:textColor="@color/mail_label"
                android:textSize="10sp"
                tools:text="2" />

            <TextView
                android:id="@+id/tvLookDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/mail_detail"
                android:textColor="@color/mail_click"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mail_detail_sender"
                    android:textColor="@color/mail_label"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvSender2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:textColor="@color/colorThemeII"
                    android:textSize="12sp"
                    tools:text="马云" />

                <TextView
                    android:id="@+id/tvHideDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:text="@string/mail_detail_hide"
                    android:textColor="@color/mail_click"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mail_detail_recvs"
                    android:textColor="@color/mail_label"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvRecvs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/colorThemeII"
                    android:textSize="12sp"
                    tools:text="马化腾；马云；马景涛；马德华；刘德华；" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyCC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mail_detail_cc"
                    android:textColor="@color/mail_label"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvCcs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/colorThemeII"
                    android:textSize="12sp"
                    tools:text="马化腾；马云；马景涛；马德华；刘德华；马化腾；马云；马景涛；马德华；刘德华；马化腾；马云；马景涛；马德华；刘德华；" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mail_detail_date"
                    android:textColor="@color/mail_label"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvSendTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:textColor="@color/colorThemeII"
                    android:textSize="12sp"
                    tools:text="2018-04-19 12:03:12" />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"
            android:background="#E3E3E3" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <jp.wasabeef.richeditor.RichEditor
                    android:id="@+id/webview_mail_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout_height="200dp" />

                <LinearLayout
                    android:id="@+id/lyAttach"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical"
                    android:visibility="gone"
                    tools:visibility="visible">

                    <TextView
                        android:id="@+id/tvAttachLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:textColor="@color/mail_label"
                        android:textSize="12sp"
                        tools:text="2附件" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvAttach"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:itemCount="2"
                        tools:listitem="@layout/list_item_attach_recv" />
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>


    </LinearLayout>

    <com.qugengting.email.widget.ShadowLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hasTopPadding="false"
        app:shadowColor="#24000000"
        app:shadowDx="0dp"
        app:shadowDy="0dp"
        app:shadowRadius="8dp"
        app:shadowShape="rectangle"
        app:shadowSide="top"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/tvReply"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_mail_reply"
                android:drawablePadding="1dp"
                android:gravity="center_horizontal"
                android:paddingTop="6dp"
                android:text="@string/mail_reply"
                android:textColor="@color/hint_normal"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tvReplyAll"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_mail_reply_all"
                android:drawablePadding="1dp"
                android:gravity="center_horizontal"
                android:paddingTop="6dp"
                android:text="@string/mail_reply_all"
                android:textColor="@color/hint_normal"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tvTransmit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_mail_transmit"
                android:drawablePadding="1dp"
                android:gravity="center_horizontal"
                android:paddingTop="6dp"
                android:text="@string/mail_transmit"
                android:textColor="@color/hint_normal"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/tvRe_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_mail_edit"
                android:drawablePadding="1dp"
                android:gravity="center_horizontal"
                android:paddingTop="6dp"
                android:text="@string/mail_re_edit"
                android:textColor="@color/hint_normal"
                android:textSize="10sp"
                android:visibility="gone"
                tools:visibility="visible" />
        </LinearLayout>
    </com.qugengting.email.widget.ShadowLayout>
</LinearLayout>