<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_dialog_back"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:background="@null"
            android:gravity="center"
            android:src="@drawable/ic_back"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/colorThemeII"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="收件箱(9)"
                android:id="@+id/tvDialogTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginLeft="4dp"
                android:src="@drawable/ic_up" />
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lyUnread"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mail_unread" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/mail_unread"
            android:textColor="@color/colorThemeII"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyRead"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mail_read" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/mail_read"
            android:textColor="@color/colorThemeII"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyAll"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_mail_unread" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/mail_all"
            android:textColor="@color/colorThemeII"
            android:textSize="14sp" />

    </LinearLayout>
</LinearLayout>