<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutDrawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <com.qugengting.email.widget.ToolBar
            android:id="@+id/barMain"
            android:layout_width="match_parent"
            android:layout_height="44dip"
            android:gravity="center"
            app:titleIcon="true"
            app:title_text="@string/mail_receiver" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/allRead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:paddingEnd="16dp"
                android:text="@string/mail_all_read"
                android:textColor="@color/mail_click"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="303dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dip"
                android:layout_marginTop="12dip"
                android:layout_marginEnd="12dip"
                android:layout_marginBottom="12dip"
                android:layout_toLeftOf="@id/allRead"
                android:background="@drawable/bg_search">

                <ImageView
                    android:id="@+id/selectImg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_searchbar_search" />

                <com.qugengting.email.widget.ClearEditText
                    android:id="@+id/edtSearch"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="4dp"
                    android:layout_toRightOf="@+id/selectImg"
                    android:background="@android:color/transparent"
                    android:hint="@string/mail_search"
                    android:singleLine="true"
                    android:textColor="@color/hint_input"
                    android:textSize="12sp" />
            </RelativeLayout>
        </RelativeLayout>

        <com.github.jdsjlzx.recyclerview.LRecyclerView
            android:id="@+id/rvRecv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:descendantFocusability="blocksDescendants"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <com.qugengting.email.widget.ShadowLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hasTopPadding="false"
            app:shadowColor="#24000000"
            app:shadowDx="0dp"
            app:shadowDy="0dp"
            app:shadowRadius="8dp"
            app:shadowShape="rectangle"
            app:shadowSide="top"
            tools:visibility="visible">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white">

                <RelativeLayout
                    android:id="@+id/lySideMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_mail_headside" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvUpdateStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:includeFontPadding="false"
                        android:textColor="@color/hint_normal"
                        android:textSize="10sp"
                        tools:text="刚刚更新" />

                    <TextView
                        android:id="@+id/tvMailAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:includeFontPadding="false"
                        android:textColor="@color/hint_normal"
                        android:textSize="12sp"
                        tools:text="caichongyu@xxx.cn" />
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/lyCreateNew"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:gravity="center"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_mail_edit" />
                </RelativeLayout>
            </RelativeLayout>
        </com.qugengting.email.widget.ShadowLayout>

    </LinearLayout>

    <include
        layout="@layout/include_email_head_side"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start" />

</androidx.drawerlayout.widget.DrawerLayout>